# cereal_catkin

./: CMakeLists.txt  README.md  package.xml
cmake/: cereal-extras.cmake
